--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 		</div>
 
 	</div>
+	<div class="header">
+		
+		<div class="logo">
+		
+			<h1><a href="#">DADO</a></h1>
+		
+		</div>
 
+	</div>
 
 
 <!--==============================Navigatin starts=============================-->
